
                          Coccinella CHANGES
                          ------------------


Not to mention all bugfixes and rewrites.

Coccinella-0.95.5 (050311):

        - added support for kprinter on unix
	- status changes displayed in roster
	- roster remembers which dir items opened/closed
	- can hide offline/transports in roster
	- added a keepalive mechansism to guard against aggresive routers


Coccinella-0.95.4 (050126):

        - critical bug in one of the message catalogs


Coccinella-0.95.3 (050125):

        - minor bugfixes
	- added add server feature to disco


Coccinella-0.95.2 (041217): 	Short summary --

        - each page, roster, disco, browser, agents, now have their own status
	  widget
	- extended buddy pouncing
	- added automatic login option
	- improved smiley/url text parsing which is 20 times faster
	- reworked layoyt of tree widget
	- muc chatrooms now show users role
	- httpd can mount directories; using css for 404 and dir listings
	- the cache should now remember files between launches
	- bindings to Gnome Meeting on unix


Coccinella-0.95.1 (040930): 	Short summary --

	- SASL authentication
	- Reworked several dialogs (new user, edit user, subscription)
	- Reworked how transports are displayed and handled


Coccinella-0.95.0 (040904): 	Short summary --

        - tabbed chat dialog
	- auto hide scrollbars
	- new info menu
	- reworked the profile settings dialog
	- reorganized prefs panels
	- improved notebook interface for smoother refresh
	- added the possibility to use ssl when registering new account
	- now automatically login after registration
	- buddy pouncing as a component
	- reworked incoming message dialog
	- extra options for profiles now in tabbed notebook
	- Itcl interface for applets accessing whiteboard functions
	- Itcl runtime environment for applets
	- mechanism to add custom protocol
	- card game applet as a first example of runtime and custom protocol
	- slide show component
	- xmpp uri parser